--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,9 +1,9 @@
 log_dest stdout
 
-connection #connection-name
-address #url:#port
-remote_username #username
-remote_password #password
+connection {{ mqttconnection }}
+address {{ mqtthost }}:{{ mqttport }}
+remote_username {{ mqttuser }}
+remote_password {{ mqttpass }}
 try_private false
 start_type automatic
 bridge_attempt_unsubscribe false
