--- a/nginx-lwm2m.conf
+++ b/nginx-lwm2m.conf
@@ -17,6 +17,7 @@ stream {
 
     server {
         listen  [::]:5683 udp;
+        listen  0.0.0.0:5683 udp;
         proxy_connect_timeout 10s;
         proxy_timeout 5m;
         proxy_pass  gitci.com:5683;
@@ -24,6 +25,7 @@ stream {
 
     server {
         listen  [::]:5684 udp;
+        listen  0.0.0.0:5684 udp;
         proxy_connect_timeout 10s;
         proxy_timeout 5m;
         proxy_pass  gitci.com:5684;
@@ -31,6 +33,7 @@ stream {
 
     server {
         listen  [::]:5686 udp;
+        listen  0.0.0.0:5686 udp;
         proxy_connect_timeout 10s;
         proxy_timeout 5m;
         proxy_pass  coaps-api.artik.cloud:5686;
