nginx-http-proxy.conf: use resolver for softbank server
This allows nginx to run even when it can't resolve the address of the
softbank server when starting the service (e.g. no network connection).

Ideal DNS server would be a local one, provided by the system, but just
hardcode Google's public 8.8.8.8 server for now.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/nginx-http-proxy.conf
+++ b/nginx-http-proxy.conf
@@ -14,7 +14,9 @@ http {
         listen  0.0.0.0:8080;
 
         location  /httpdc {
-            proxy_pass  https://device.iotpf.mb.softbank.jp;
+            resolver  8.8.8.8 valid=30s;
+            set  $softbank_iotpf device.iotpf.mb.softbank.jp;
+            proxy_pass  https://$softbank_iotpf;
         }
 
         location  /DEFAULT {
