nginx-lwm2m.conf: fix artik's cloud server address
Fixed address used for coaps-api.artik.cloud to allow
the container to run even when there is no network.

Signed-off-by: Ricardo Salveti <ricardo.salveti@linaro.org>

--- a/nginx-lwm2m.conf
+++ b/nginx-lwm2m.conf
@@ -44,6 +44,9 @@ stream {
         listen  0.0.0.0:5686 udp;
         proxy_connect_timeout 10s;
         proxy_timeout 5m;
-        proxy_pass  coaps-api.artik.cloud:5686;
+        # Fixed address used for coaps-api.artik.cloud to allow
+        # the container to run even when there is no network.
+        # TODO: find if there is a smarter/better way to workaround this
+        proxy_pass  23.22.72.29:5686;
     }
 }
